--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,5 @@
-build*
-MANIFEST
-.idea*
-htmlcov*
-_*
-!__init__.py
-docs/_*
-*.pyc
-dist
-*.old
-*.swp
-*.swo
-*.log
-t.py
-tmp
-old
-dist
-*.egg-info
-*.swp
+*.egg-info/
+__pycache__/
+.mypy_cache/
 .coverage
+*.pyc
